# site

./: .dockerignore  .env  .gitignore  .python-version  Dockerfile  Makefile  README.md  app.py  cli.py  config.py  eval.py  evals.json  fly.toml  make_site.py  new_post.py  pyproject.toml  requirements-dev.txt  requirements.txt  site_config.yaml  test_app.py
blog/: 2022-11-15_LLMs.md  2022-11-16_My-Partner.md  2022-11-22_Pray-for-Pain.md  2022_11_15-Handmade.md
pages/: About.md  Clips.md  Links.md  Now.md  Playlists.md  Quotes.md  Tools.md  Work.md  about.md  goals.md  links.md  now.md  quotes.md  rules.md  stack.md  toolbox.md  tools.md  video.md
posts/: 1000-reflections.md  2023-chilly-half-marathon-race-reflections.md  announcing-your-time.md  athenian-taxes.md  code-won.md  craft-and-care.md  craft-is-an-advantage.md  dream-phone.md  driver-ui.md  duty.md  flask_getting_started.md  flying.md  friction-to-publish.md  handmade.md  hard-part-interview.md  hard-times-create-hard-companies.md  jim-simons-on-beauty.md  living-wrong.md  llm-computers.md  marketing-emails.md  my-partner.md  on-duty.md  perf-update-23-07.md  pmf.md  pocket-to-rss.md  pray-for-pain.md  recently-23-07.md  rook-1.md  rss-setup.md  running-all-wrong.md  salmon-in-the-river.md  scaling-software.md  science.md  seal-test.md  service-health.md  small.md  somebody-doesnt-work-here.md  tags.md  the-4-am-club.md  the-bauhaus-of-software.md  (+2 more)
service/: blogpost.py  common.py  config.py  event.py  micropub.py  page.py  post.py  posthog.py
static/: favicon.sketch  styles.css
templates/: 404.html  404.jinja  base.html  base.jinja  blog.html  blog.jinja  blog_index.jinja  blog_post.html  blog_post_preview.html  blog_tagged.jinja  home.html  index.jinja  page.html  page.jinja  (+3 more)
(+86 files in other folders)
