[project]
name = "site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo>=4.11.1",
    "python-dotenv>=1.0.1",
    "rfeed>=1.1.1",
    "markdown>=3.5",
    "pydantic>=2.4.2",
    "python-frontmatter>=1.0.0",
    "click>=8.1.7",
    "python-slugify>=8.0.4",
    "pymdown-extensions>=10.12",
    "pygments>=2.19.1",
    "jinja2>=3.1.5",
    "boto3>=1.36.22",
]
