[project]
name = "site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rfeed>=1.1.1",
    "python-frontmatter>=1.0.0",
    "jinja2>=3.1.5",
    "markdown>=3.7",
    "pymdown-extensions>=10.14.3",
    "pygments>=2.19.1",
]
